--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ sha3 = "0.10.8"
 tracing = "0.1.37"
 tracing-forest = {version = "0.1.6", features = ["ansi", "smallvec"]}
 tracing-subscriber = {version = "0.3.17", features = ["std", "env-filter"]}
+# p3-field = "0.2.0"
+# p3-goldilocks = "0.2.0"
 
 [dev-dependencies]
 criterion = "0.5.1"
